--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "express": "^4.14.0",
     "history": "^4.3.0",
     "isomorphic-fetch": "^2.2.1",
+    "material-ui": "^0.16.5",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-helmet": "^3.1.0",
