--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
     "react-router-redux": "^4.0.6",
+    "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-connect": "^3.0.0",
     "redux-thunk": "^2.1.0"
